# competitive-research

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: methodology.md
skills/competitive-research/: SKILL.md  trigger-eval-set.json
skills/competitive-research/evals/: evals.json
src/competitive_research/: __init__.py  cli.py  validator.py
templates/: competitor-profile.md  research-report.md
tests/: test_repository.py
